modMonitor-2.6.1-beta
================================
- Remove $scriptProperties from plugins statistic


modMonitor-2.6.0-beta
================================
- Added setting modmonitor.collect_plugins_info
- Added OnModMonitorPrepareRequestQuery event
- Added custom columns and filters for Requests Grid


modMonitor-2.5.0-beta
================================
- Added plugin statistic collection


modMonitor-2.4.2-beta
================================
- Added en localization


modMonitor-2.4.1-beta
================================
- Added fastFieldParser support


modMonitor-2.4.0-beta
================================
- Added loging php errors


modMonitor-2.3.0-beta
================================
- Added HTTP response statuses


modMonitor-2.2.1-beta
================================
- Added context filter
- Minor bugfixes


modMonitor-2.2.0-beta
================================
- Added parents for request and items
- Added filters
- Added items tree interface
- Minor bugfixes
- Added exclude contexts setting
- Added min time setting
- Added truncate button


modMonitor-2.1.0-beta
================================
- Added pdoParser support
- Added from_cache flag in statistic
- Minor bugfix


modMonitor-2.0.0-beta
================================
- Added visual interface in manager panel
- Added log user_id


modMonitor-1.0.0-beta
================================
- First release